# Project_surface_modelling

./: Readme.md
projet_surf_mod/: .gitignore  CMakeLists.txt  CMakeLists_package.txt  Readme.md
projet_surf_mod/data/shapes/: Deer.txt  Device.txt  Elephant.txt  Octopus.txt  Test copy.txt  Test.txt  apple-1.txt  complex_elements.txt  hand_elements.txt  tmp_polygon.txt
projet_surf_mod/external_libs/: Readme.md
projet_surf_mod/include/: Deformation.hpp  Edge.hpp  Mesh.hpp  Polygon.hpp  Triangle.hpp  Vec2.hpp  Viewer.hpp  delaunator_ext.hpp  earcut.hpp  solver.hpp
projet_surf_mod/src/: Deformation.cpp  Edge.cpp  Mesh.cpp  Polygon.cpp  Triangle.cpp  Vec2.cpp  Viewer.cpp  delaunator_ext.cpp  main.cpp
